added hint to swipe right

--- a/www/lang/locale-en.json
+++ b/www/lang/locale-en.json
@@ -209,7 +209,8 @@
     "kOnlyUseWebSocket"          :"only use websockets",
     "kOperationInProgressBody"   :"The previous operation is still in progress. Please wait",
     "kOperationInProgressTitle"  :"Operation in Progress",
-    "kPortalNotice"              :"If this screen doesn't go away after a while, you have not setup ZoneMinder and/or the APIs correctly",
+    "kPortalNotice"              :"If this screen doesn't go away after a while, it is possible your APIs are not configured properly",
+    "kPortalNoticeSub"           : "(Swipe right to access the menu)",
     "kPTZ"                       :"pan/tilt/zoom",
     "kPTZNotReady"               :"Not ready for PTZ",
     "kPTZnotConfigured"          :"PTZ not configured for this monitor",
