#353 - inital code (also requires ZM API patch) to support local and server timezones

--- a/www/lang/locale-en.json
+++ b/www/lang/locale-en.json
@@ -362,6 +362,7 @@
     "kEventHistSlower"           : "slower",
     "kEventHistFaster"           : "faster",
     "kEventHistPlay"            : "play",
-    "kEventHistPause"           : "pause"
+    "kEventHistPause"           : "pause",
+    "kLocalTimeZone"            :"convert to local timezone"
     
 }
