#353 - more timezone tweaks, especially making sure humanizeTime is ALWAYS using local time irrespective of setting

--- a/www/lang/locale-en.json
+++ b/www/lang/locale-en.json
@@ -363,7 +363,7 @@
     "kEventHistFaster"           : "faster",
     "kEventHistPlay"            : "play",
     "kEventHistPause"           : "pause",
-    "kLocalTimeZone"            :"convert to local timezone",
+    "kLocalTimeZone"            :"use local timezone",
     "kTimeZoneNotSupported"     : "your API doesn't support this",
     "kServerTimeZone"           : "server TZ"
     
